2001-05-06  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/transaction-report.scm: fix bug.

2001-05-05  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: fix bugs

2001-05-05  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/price-scatter.scm: More experiments with scatter
	plots which are working now. Doesn't look too nice though.

	* src/scm/commodity-utilities.scm
	(gnc:get-match-commodity-splits): new function.

	* src/scm/date-utilities.scm (gnc:date->timepair): new
	function. Code cleanup.

	* src/guile/gnc.gwp: more price handling functions.

2001-05-04  Dave Peticolas  <dave@krondo.com>

	* src/register/splitreg.c: set action cell to autosize

	* src/register/gnome/combocell-gnome.c (xaccComboCellSetAutoSize):
	new func.

	* src/register/gnome/gnucash-item-list.c (gnc_item_list_autosize):
	return the clist width

	* src/register/gnome/gnucash-item-edit.c (item_edit_show_popup):
	fix bug

	* src/scm/main.scm: run the book-opened hook before showing
	the new-user window.

	* src/guile/Makefile.am: remove references to gnc-autogen.h.
	Clean gnc.c and gnc.h.

2001-05-03  Dave Peticolas  <dave@krondo.com>

	* src/engine/date.c (timespec_normalize): fix bug

	* doc/sgml/C/xacc-about.sgml: update credits

	* src/gnc-ui-util.h (_GNCPrintAmountInfo): make commodity const

	* src/gnome/window-register.c: fix compiler warning

2001-05-04  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm : Add labels
	to subtotals.

2001-05-04  Conrad Canterford <conrad@mail.watersprite.com.au>

	* make-gnucash-patch.in: add --manifest option (allow use of a
	manifest file. Also, change --file option to allow multiple files.
	Fix bug in previous change.

	* README.patches: Updated to reflect new capabilities.

2001-05-03  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/*/xacc-hierarchical-report.sgml: remove file

	* doc/sgml/pt_PT/xacc-txf-categories.sgml: add missing </article>
